change query for report
