# api/reports.go
@@ -1,7 +1,10 @@
 package api
 
 import (
+	"encoding/csv"
+	"fmt"
 	"net/http"
+	"os"
 	"time"
 
 	db "github.com/AlexDead99/user-balance-service/db/sqlc"
@@ -14,10 +17,17 @@ import (
 // @Tags         reports
 // @Accept       json
 // @Produce      json
-// @Param body body <blank> true "reportBody"
-// @Success      200  {object}  <blank>
+// @Param body body MonthReportRequest true "reportBody"
+// @Success      200  {object} MonthReportResponse
 // @Router       /users/report [post]
 func (server *Server) CreateUserReport(ctx *gin.Context) {}
+
+type MonthReportRequest struct {
+	Date string `json:"date" binding:"required"`
+}
+type MonthReportResponse struct {
+	Link string `json:"link"`
+}
 
 // ShowAccount godoc
 // @Summary      Info about succeeded transfers for current month
@@ -26,15 +36,8 @@ func (server *Server) CreateUserReport(ctx *gin.Context) {}
 // @Accept       json
 // @Produce      json
 // @Param body body MonthReportRequest true "transfer"
-// @Success      200  {object}  <blank>
+// @Success      200  {object} MonthReportResponse
 // @Router       /report [post]
-type MonthReportRequest struct {
-	Date time.Time `form:"date" binding:"required" time_format:"2022-01-02"`
-}
-type MonthReportResponse struct {
-	Link string `json:"link"`
-}
-
 func (server *Server) CreateMonthReport(ctx *gin.Context) {
 	var req MonthReportRequest
 	err := ctx.ShouldBindJSON(&req)
@@ -43,9 +46,16 @@ func (server *Server) CreateMonthReport(ctx *gin.Context) {
 		return
 	}
 
+	date, err := time.Parse("2006-01-02", req.Date)
+	fmt.Println(date, err)
+	if err != nil {
+		ctx.JSON(http.StatusBadRequest, "Can't convert to date")
+		return
+	}
+
 	params := db.GeneralReportParams{
-		CreatedAt:   req.Date,
-		CreatedAt_2: req.Date,
+		CreatedAt:   date,
+		CreatedAt_2: date,
 	}
 	transfers, err := server.store.GeneralReport(ctx, params)
 	if err != nil {
@@ -56,7 +66,26 @@ func (server *Server) CreateMonthReport(ctx *gin.Context) {
 	reports := make(map[string]float32, 0)
 
 	for _, transfer := range transfers {
-		reports[transfer.name] += transfer.TotalPrice
+		reports[transfer.Name] += transfer.TotalPrice
 	}
 
+	fileName := date.String() + ".csv"
+	f, err := os.Create("../" + fileName)
+	if err != nil {
+		ctx.JSON(http.StatusInternalServerError, errorResponse(err))
+		return
+	}
+
+	w := csv.NewWriter(f)
+	defer w.Flush()
+
+	for key, value := range reports {
+		err := w.Write([]string{fmt.Sprintf("%v", key), fmt.Sprintf("%v", value)})
+		if err != nil {
+			ctx.JSON(http.StatusInternalServerError, errorResponse(err))
+			return
+		}
+	}
+
+	ctx.JSON(http.StatusOK, MonthReportResponse{Link: fileName})
 }
